@@ -6,9 +6,9 @@ lib/IPC/SRLock/Base.pm
 lib/IPC/SRLock/Constants.pm
 lib/IPC/SRLock/Fake.pm
 lib/IPC/SRLock/Fcntl.pm
-lib/IPC/SRLock/Functions.pm
 lib/IPC/SRLock/Memcached.pm
 lib/IPC/SRLock/Sysv.pm
+lib/IPC/SRLock/Utils.pm
 t/02pod.t
 t/03podcoverage.t
 t/05kwalitee.t
